# as-tree

./: Cargo.toml  Makefile  README.md  SECURITY_WORK_NOTES.md  WORKSPACE  install.sh
.github/workflows/: ci.yml  release.yml
src/: BUILD  main.rs  options.rs
test/cli/level/: run.sh  run.sh.exp
test/cli/version/: run.sh.exp
test/security/: README.md  arg_panic.sh  escape_injection.sh
tests/: integration.rs
tools/scripts/: release.sh
